# regi-py

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  async_mcts_trainer.py  card.cc  card.h  combo.cc  combo.h  console.cc  console.h  deck.cc  deck.h  dfsel.cc  dfsel.h  driver.py  effects.cc  enemy.h  interact.cc  logger.h  main  main.cc  mcts_trainer.py  player.cc  player.h  pyproject.toml  regi.cc  regi.h  rl_trainer.py  setup.py  utils.h
game_json/: asa_poster_plots.R  bin2df.py  game_stats.R  gamejson.R  j2df.py  plot_mc1.R
repeaters/: mctscollect.py  multirepeat.py  simrepeat.py
src/regi_py/: __init__.py  basic.py  logger.py
src/regi_py/core/: Makefile  card.cc  card.h  combo.cc  combo.h  console.cc  console.h  deck.cc  dfsel.cc  dfsel.h  effects.cc  enemy.cc  enemy.h  exports.cc  interact.cc  location.cc  location.h  main.cc  phaseinfo.cc  phaseinfo.h  player.cc  randomly.cc  regi.cc  regi.h
src/regi_py/logging/: __init__.py  dummylog.py  jsonlog.py  utils.py
src/regi_py/rl/: __init__.py  basicnet.py  batched_mcts.py  keepy_explorer.py  loaders.py  mc1.py  mc2.py  mcts.py  mcts_utils.py  rl1.py  subnets.py  utils.py
src/regi_py/strats/: __init__.py  basic.py  brute_sampling.py  mcts_explorer.py  phase_utils.py  preserve.py  recommender.py  sub_random.py  suitpref.py  trim_random.py
trainers/: async_mcts_trainer.py  batched_mcts_trainer.py  rl_trainer.py
webdriver/: driver.py  pubdrive.py
webdriver/static/: minimal.css  regi.js
webdriver/templates/layouts/: base.html
webdriver/templates/pages/: index.html  login.html  select_bots.html  (+1 more)
